--- a/app/src/main/res/layout/tabhost_item_view.xml
+++ b/app/src/main/res/layout/tabhost_item_view.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <ImageView
+        android:layout_marginTop="5dp"
         android:id="@+id/iv_tab_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/tab_home_btn"></ImageView>
+        android:src="@drawable/tab_home_btn"/>
 
     <TextView
         android:id="@+id/tv_tab_text"
@@ -17,6 +18,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="首页"
-        android:textSize="10sp"></TextView>
+        android:textSize="10sp"/>
 
 </LinearLayout>
