--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,9 +15,9 @@
         app:tabIndicatorColor="#FF00FF00"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="#FF00FF00"
-        app:tabTextColor="#FF000000" />
+        app:tabTextColor="@color/white" />
 
-    <me.anany.weikandian.view.CustomViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/vp_home"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
