--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="gray">#868686</color>
     <color name="tv_line">#cacaca</color>
     <color name="tablayout_bg">#202020</color>
+    <color name="white">#ffffff</color>
 </resources>
