增加首页RecyclerView、RecyclerView适配器

--- a/app/src/main/res/layout/pager_home.xml
+++ b/app/src/main/res/layout/pager_home.xml
@@ -1,7 +1,7 @@
-<com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lv_home"
+<com.jcodecraeer.xrecyclerview.XRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recycle_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</com.handmark.pulltorefresh.library.PullToRefreshListView>
+</com.jcodecraeer.xrecyclerview.XRecyclerView>
 
