增加 首页ViewPager适配器View缓存、修复部分Bug

--- a/app/src/main/res/layout/pager_home.xml
+++ b/app/src/main/res/layout/pager_home.xml
@@ -1,7 +1,21 @@
-<com.jcodecraeer.xrecyclerview.XRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/recycle_view"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</com.jcodecraeer.xrecyclerview.XRecyclerView>
 
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/recycle_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <TextView
+        android:id="@+id/tv_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="暂无数据" />
+</LinearLayout>
