--- a/app/src/main/res/layout/item_home_pager_3.xml
+++ b/app/src/main/res/layout/item_home_pager_3.xml
@@ -15,6 +15,8 @@
 
     <TextView
         android:id="@+id/tv_title"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|left"
@@ -30,42 +32,53 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:gravity="center_vertical"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_op_mark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
             android:background="@mipmap/ic_hot" />
 
         <TextView
+            android:textSize="10sp"
+            android:layout_centerVertical="true"
             android:id="@+id/tv_op_mark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/iv_op_mark"
-            android:gravity=""
             android:text="专题" />
 
         <TextView
+            android:textSize="10sp"
             android:id="@+id/tv_account_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/tv_op_mark"
             android:text="热点资讯大全" />
 
         <TextView
+            android:textSize="10sp"
             android:id="@+id/tv_read_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/tv_account_name"
+            android:layout_marginLeft="10dp"
             android:text="1067" />
 
         <TextView
+            android:textSize="10sp"
             android:id="@+id/tv_time"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
@@ -76,9 +89,9 @@
             android:id="@+id/iv_delete"
             android:layout_width="20dp"
             android:layout_height="12dp"
+            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:layout_gravity="right"
             android:background="@mipmap/ic_article_delete" />
     </RelativeLayout>
