--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="tv_line">#cacaca</color>
     <color name="tablayout_bg">#202020</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
