--- a/app/src/main/res/layout/item_home_pager_3.xml
+++ b/app/src/main/res/layout/item_home_pager_3.xml
@@ -30,8 +30,9 @@
 
         <ImageView
             android:id="@+id/iv_main_img"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="120dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1" />
 
