--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -10,8 +10,8 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        app:tabGravity="center"
         android:background="@color/tablayout_bg"
+        app:tabGravity="center"
         app:tabIndicatorColor="#FF00FF00"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="#FF00FF00"
@@ -20,8 +20,10 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_home"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tab_layout" />
 
 
-</LinearLayout>
+</RelativeLayout>
