添加 ReclycleView 点击进入 新闻详情页

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="tablayout_bg">#202020</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="white_gray">#e1e1e1</color>
 </resources>
