--- a/app/src/main/res/layout/app_titlebar.xml
+++ b/app/src/main/res/layout/app_titlebar.xml
@@ -41,6 +41,7 @@
 
     <ProgressBar
         android:id="@+id/pb_title"
+        android:visibility="invisible"
         style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
