--- a/app/src/main/res/layout/activity_home_news_detail.xml
+++ b/app/src/main/res/layout/activity_home_news_detail.xml
@@ -1,87 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:orientation="vertical">
 
-    <include layout="@layout/app_titlebar" />
+    <include layout="@layout/app_titlebar"/>
 
     <RelativeLayout
-        android:id="@+id/rl_webview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:id="@+id/rl_webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-
+        <WebView
+                android:id="@+id/wv_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
 
         <LinearLayout
-            android:id="@+id/ll"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/white"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+                android:id="@+id/ll"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_vertical|left"
-                android:orientation="horizontal">
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    android:background="@mipmap/wx_article_forward_icon" />
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:background="@mipmap/wx_article_forward_icon"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="分享给好友"
-                    android:textSize="12sp" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="分享给好友"
+                        android:textSize="12sp"/>
             </LinearLayout>
 
             <View
-                android:layout_width="0.5dp"
-                android:layout_height="match_parent"
-                android:background="@color/tv_line" />
+                    android:layout_width="0.5dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/tv_line"/>
 
             <ImageView
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginLeft="30dp"
-                android:background="@mipmap/wx_detail_toolbar_comment_icon" />
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_marginLeft="30dp"
+                    android:background="@mipmap/wx_detail_toolbar_comment_icon"/>
 
             <ImageView
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginLeft="20dp"
-                android:background="@mipmap/wx_detail_toolbar_showcomment_icon" />
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@mipmap/wx_detail_toolbar_showcomment_icon"/>
 
             <ImageView
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginLeft="20dp"
-                android:background="@mipmap/ic_tabbar_collect_icon" />
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@mipmap/ic_tabbar_collect_icon"/>
 
             <ImageView
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginLeft="20dp"
-                android:background="@mipmap/ic_tabbar_font_icon" />
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@mipmap/ic_tabbar_font_icon"/>
 
         </LinearLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_above="@id/ll"
-            android:background="@color/tv_line" />
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_above="@id/ll"
+                android:background="@color/tv_line"/>
 
     </RelativeLayout>
 
