--- a/app/src/main/res/drawable/shape_btn_add_channel.xml
+++ b/app/src/main/res/drawable/shape_btn_add_channel.xml
@@ -1,38 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <!-- 边框 -->
-    <item>
-        <shape>
 
-            <!-- 边框颜色 -->
-            <solid android:color="#32ce30" />
-            <!-- 边框圆角值 -->
-            <corners
-                android:bottomLeftRadius="14dp"
-                android:bottomRightRadius="14dp"
-                android:topLeftRadius="14dp"
-                android:topRightRadius="14dp" />
-        </shape>
-    </item>
+    <padding
+            android:bottom="2dp"
+            android:left="2dp"
+            android:right="2dp"
+            android:top="2dp" />
 
-    <!-- 主体 -->
-    <item
-        android:bottom="1dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp">
-        <shape>
+    <stroke android:width="1dp" android:color="@color/main_green"/>
+    <solid android:color="@color/white" />
+    <corners android:radius="8dp" />
 
-            <!-- 主体内容颜色值 -->
-            <solid android:color="@color/white" />
-            <!-- 主体圆角值 -->
-            <corners
-                android:bottomLeftRadius="14dp"
-                android:bottomRightRadius="14dp"
-                android:topLeftRadius="14dp"
-                android:topRightRadius="14dp" />
-        </shape>
-    </item>
-
-</layer-list>
+</shape>
