--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,16 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:id="@+id/realtabcontent"
+        android:id="@+id/fl_content"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <android.support.v4.app.FragmentTabHost
+    <me.anany.weikandian.widget.CustomFragmentTabHost
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/tab_bg_color"
+        android:background="@color/bottom_tab_bg_color"
         android:paddingBottom="5dp">
 
         <View
@@ -27,6 +27,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="0" />
-    </android.support.v4.app.FragmentTabHost>
+    </me.anany.weikandian.widget.CustomFragmentTabHost>
 
 </LinearLayout>
