--- a/app/src/main/res/layout/app_titlebar.xml
+++ b/app/src/main/res/layout/app_titlebar.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="48dp"
-    android:background="@color/tablayout_bg"
+    android:background="@color/title_bar_color"
     android:clipToPadding="true"
     android:fitsSystemWindows="true">
 
