--- a/app/src/main/res/layout/item_home_pager_2.xml
+++ b/app/src/main/res/layout/item_home_pager_2.xml
@@ -2,21 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp">
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/tv_line" />
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:orientation="vertical">
-
 
         <TextView
             android:id="@+id/tv_title"
@@ -25,8 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|left"
-            android:layout_marginTop="10dp"
-            android:text="玩第三方第三方第三方第三方" />
+            android:layout_marginTop="10dp" />
 
 
         <LinearLayout
@@ -112,5 +104,8 @@
 
     </LinearLayout>
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/tv_line" />
 </LinearLayout>
