--- a/app/src/main/res/layout/item_home_pager_1.xml
+++ b/app/src/main/res/layout/item_home_pager_1.xml
@@ -22,8 +22,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|left"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textSize="16sp"/>
 
 
             <RelativeLayout
